add_executable(TestSubNetInsertion TestSubNetInsertion.cpp)
target_link_libraries(TestSubNetInsertion PUBLIC Models gtest::gtest)


add_executable(TestSubnetHosts TestSubnetHosts.cpp)
target_link_libraries(TestSubnetHosts PUBLIC Models gtest::gtest)

add_executable(TestSubnetDeletionsAndReInsertions TestSubnetDeletionsAndReInsertions.cpp)
target_link_libraries(TestSubnetDeletionsAndReInsertions PUBLIC Models gtest::gtest)

add_executable(TestHashedVebTreeRouting  TestHashedVebTreeRouting.cpp)
target_link_libraries(TestHashedVebTreeRouting  PUBLIC Models gtest::gtest)